# HERA

./: README.md
Algorithms-HERA/: CMakeLists.txt  HERA_main.cc
AlgorithmsCPP/: CMakeLists.txt  Discussion.txt  README.txt  factorial.cc  factorial.h  fibonacci.cpp  fibonacci.h  main.cc  stringAnd_HOF_Examples.cc  stringAnd_HOF_Examples.h
AnswerKeys2021S/: KeyStatusSummary.txt
Compiler--C1/: AST.h  ContextInfo.cc  ContextInfo.h  README-Design.txt  main.cc  parser.cc  parser.h  scanner-regexp-can-be-copied-over-yours-lab5-cpp.txt  scanner-regexp.cc  scanner-regexp.h  scannerDemo.cc
Compiler-C/: AST.cc  CMakeLists.txt  ContextInfo.cc  ContextInfo.h  generateHERA.cc  playback.m3u  scanner-regexp.l  scanner.cpp  streams.h
Dictionary-CPP/: CMakeLists.txt  Calculator.cpp  Calculator.h  Dictionary.cpp  Dictionary.h  ^_tests_extra_credit.txt  listDemos.cpp  listPractice.cpp  listPractice.h  main.cpp  test-Dictionary.cpp
HERA-C/: HERA-C-Run  HERA-arch.h  HERA-data.h  HERA-instr.h  HERA-opcode.h  HERA-print.h  HERA-pseudo.h  HERA-typical-postamble.cc  HERA-typical-preamble.cc  HERA.h  HERA_main-test-stacklib.cc  HERA_main-test-stacklib.out  HERA_main-test.cc  HERA_main-test.out  HERA_nolib-test.cc  HERA_nolib-test.hera  HERA_nolib-test.out  HERA_nolib_altdir.out  HERA_nolib_fardir.out  Make-sample-output.txt  (+5 more)
Interpreter-C/: 2.txt  3.txt  CMakeLists.txt  Dictionary.h  README-Design.txt  Tree.cpp  TreeHelpers.h  parser.cpp  parser.h  playback.m3u
Interpreter-C/tests/: 04-mult-exit.hrk  23-if.hrk  30-tyang3-booleanliterals.hrk  50-tyang3-comparison.hrk  60-tyang3-if.hrk
(+97 files in other folders)
